--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/bundle/indent_guides"]
 	path = vim/bundle/indent_guides
 	url = https://github.com/vim-scripts/Indent-Guides.git
+[submodule "vim/bundle/supertab"]
+	path = vim/bundle/supertab
+	url = https://github.com/ervandew/supertab
