[bashrc] started tracking ls_colors / updated bashrc to point to it

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
 	url = https://github.com/ervandew/supertab
+[submodule "ls_colors"]
+	path = ls_colors
+	url = https://github.com/trapd00r/LS_COLORS.git
