[make_conf] cleaned up use flags

--- a/make.conf
+++ b/make.conf
@@ -16,16 +16,16 @@ PORTDIR_OVERLAY="/usr/local/portage"
 INPUT_DEVICES="evdev"
 VIDEO_CARDS="nvidia"
 
-USE_X="truetype X new-login xorg xscreensaver xv xcomposite xinerama opengl aiglx xcb svg udev"
+USE_X="truetype X xorg xscreensaver xv xcomposite xinerama opengl xcb svg udev"
 USE_IMAGE="jpeg gif tiff png svg pdf"
-USE_MEDIA="flac cdr css alsa mad vidix asf win32codecs dvd mp4 aac x264 xvid  mp3 real gstreamer video vdpau xvmc clock fftw -outputs taglib visualizer aalib 64bit vorbis lame network amd64 apng tordns" 
-USE_GENERAL="java bzip2 symlink sqlite spell xml en 256-color"
-USE_SYSTEM="cups fam dbus aoss threads acpi openmp openmpi"
-USE_GNOME="gtk cairo glitz firefox gdu extras device-mapper policykit consolekit wxwidgets nautilus"
-USE_OTHER="mmx sse sse2 nvidia truetype type1 cleartype corefonts lm_sensors bash-completion apache2 php ssl xml cgi curl -dso perl gnutls extensions mono fontconfig cscope mysql vim-syntax"  
-USE_NOT="-arts -ipv6 -kde -stable qt3support"
+USE_MEDIA="flac css alsa mad vidix asf win32codecs dvd mp4 aac x264 xvid  mp3 real gstreamer video vdpau xvmc clock fftw taglib aalib 64bit vorbis lame network apng" 
+USE_GENERAL="java bzip2 symlink sqlite spell xml 256-color"
+USE_SYSTEM="cups dbus threads acpi openmp"
+USE_GNOME="gtk cairo extras device-mapper wxwidgets nautilus"
+USE_OTHER="mmx sse sse2 sse3 nvidia corefonts lm_sensors bash-completion apache2 php ssl cgi curl perl gnutls extensions fontconfig cscope mysql vim-syntax qt3support"  
+USE_NOT="-ipv6 -kde -stable -dso"
 USE_VBOX="additions python qt4 sdk"
-USE_DEV="cuda examples profiler debugger opencl tk subversion cvs v4l sse3 ffmpeg gd alisp apache2_modules_dav"
+USE_DEV="cuda examples profiler debugger opencl tk subversion cvs v4l ffmpeg gd alisp apache2_modules_dav"
 
 USE="${USE_X} ${USE_DEV} ${USE_IMAGE} ${USE_MEDIA} ${USE_GENERAL} ${USE_SYSTEM} ${USE_SYSTEM} ${USE_GNOME} ${USE_OTHER} ${USE_NOT} ${USE_VBOX}"
 
