[make_conf] reorganized use flags

--- a/make.conf
+++ b/make.conf
@@ -16,18 +16,16 @@ PORTDIR_OVERLAY="/usr/local/portage"
 INPUT_DEVICES="evdev"
 VIDEO_CARDS="nvidia"
 
-USE_X="truetype X xorg xscreensaver xv xcomposite xinerama opengl xcb svg udev"
-USE_IMAGE="jpeg gif tiff png svg pdf"
-USE_MEDIA="flac css alsa mad vidix asf win32codecs dvd mp4 aac x264 xvid  mp3 real gstreamer video vdpau xvmc clock fftw taglib aalib 64bit vorbis lame network apng" 
-USE_GENERAL="java bzip2 symlink sqlite spell xml 256-color"
-USE_SYSTEM="cups dbus threads acpi openmp"
-USE_GNOME="gtk cairo extras device-mapper wxwidgets nautilus"
-USE_OTHER="mmx sse sse2 sse3 nvidia corefonts lm_sensors bash-completion apache2 php ssl cgi curl perl gnutls extensions fontconfig cscope mysql vim-syntax qt3support"  
-USE_NOT="-ipv6 -kde -stable -dso"
-USE_VBOX="additions python qt4 sdk"
-USE_DEV="cuda examples profiler debugger opencl tk subversion cvs v4l ffmpeg gd alisp apache2_modules_dav"
-
-USE="${USE_X} ${USE_DEV} ${USE_IMAGE} ${USE_MEDIA} ${USE_GENERAL} ${USE_SYSTEM} ${USE_SYSTEM} ${USE_GNOME} ${USE_OTHER} ${USE_NOT} ${USE_VBOX}"
+USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2
+     apache2_modules_dav apng asf bash-completion bzip2 cairo cgi clock
+     corefonts cscope css cuda cups curl cvs dbus debugger device-mapper dvd
+     examples extensions extras ffmpeg fftw flac fontconfig gd gif gnutls
+     gstreamer gtk java jpeg lame lm_sensors mad mmx mp3 mp4 mysql nautilus
+     network nvidia opencl opengl openmp pdf perl php png profiler python
+     qt3support qt4 real sdk spell sqlite sse sse2 sse3 ssl subversion svg
+     symlink taglib threads tiff tk truetype udev v4l vdpau video vim-syntax
+     vorbis wxwidgets x264 xcb xcomposite xinerama xml xorg xscreensaver xv
+     xvid xvmc -dso -ipv6 -kde -stable"
 
 LINGUAS="en"
 
