[make_conf] valgrind fix

--- a/make.conf
+++ b/make.conf
@@ -3,7 +3,7 @@ CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j5"
 
-#FEATURES="-distcc"
+FEATURES="splitdebug"
 
 #GENTOO_MIRRORS="rsync://mirrors.rit.edu/gentoo/ ftp://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/"
 #GENTOO_MIRRORS="http://durknation.gotdns.com/gentoo/"
