[make] updated useflags

--- a/make.conf
+++ b/make.conf
@@ -17,15 +17,14 @@ INPUT_DEVICES="evdev"
 VIDEO_CARDS="nvidia"
 
 USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2
-     apache2_modules_dav apng asf bash-completion bzip2 cairo cgi 
-     corefonts cscope css cuda cups curl cvs dbus debugger device-mapper dvd
-     examples extensions extras ffmpeg fftw flac fontconfig gd gif gnutls
-     gstreamer gtk java jpeg lame lm_sensors mad mmx mp3 mp4 mysql nautilus
-     network opencl opengl openmp pdf perl php png profiler python
-     qt3support qt4 real sdk spell sqlite sse sse2 sse3 ssl subversion svg
-     symlink taglib threads tiff tk truetype udev v4l vdpau video vim-syntax
-     vorbis wxwidgets x264 xcb xcomposite xinerama xml xorg xscreensaver xv
-     xvid xvmc -dso -ipv6 -kde"
+     apache2_modules_dav apng asf bash-completion bzip2 cairo cgi corefonts
+     cscope css cuda cups curl cvs dbus debugger device-mapper dvd examples
+     extensions extras ffmpeg fftw flac fontconfig gd gif gnutls gstreamer gtk
+     java jpeg lame lm_sensors mad mmx mp3 mp4 mysql nautilus network opencl
+     opengl openmp pdf perl php png profiler python qt3support qt4 real sdk
+     spell sqlite sse sse2 sse3 ssl subversion svg symlink taglib threads tiff
+     tk truetype udev v4l vdpau video vim-syntax vorbis wxwidgets x264 xcb
+     xcomposite xinerama xml xorg xscreensaver xv xvid xvmc -dso -ipv6 -kde"
 
 LINGUAS="en"
 
