--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,4 @@
 [submodule "vim/bundle/matchit"]
 	path = vim/bundle/matchit
 	url = https://github.com/vim-scripts/matchit.zip.git
+    ignore = dirty
