--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,6 @@
 	path = vim/bundle/matchit
 	url = https://github.com/vim-scripts/matchit.zip.git
     ignore = dirty
+[submodule "vim/bundle/matchtag"]
+	path = vim/bundle/matchtag
+	url = https://github.com/gregsexton/MatchTag
