--- a/make.conf
+++ b/make.conf
@@ -28,7 +28,7 @@ USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2 \
      symlink taglib threads tiff tk truetype udev v4l vdpau video \
      vim-pager vim-syntax vorbis wxwidgets x264 xcb xcomposite \
      xinerama xml xorg xscreensaver xv xvid xvmc g3dvl icu -dso -ice \
-     -ipv6 -kde midi zsh-completion minizip"
+     -ipv6 -kde midi zsh-completion minizip dot latex multilib"
 
 LINGUAS="en"
 
