--- a/make.conf
+++ b/make.conf
@@ -19,7 +19,7 @@ VIDEO_CARDS="nvidia"
 # ufed to organize flags
 USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2 \
      apache2_modules_dav apng asf bash-completion bzip2 cairo cgi \
-     corefonts cscope css csv cuda cups curl cvs dbus debugger \
+     corefonts cscope css csv cups curl cvs dbus debugger \
      device-mapper dvd examples extensions extras ffmpeg fftw flac \
      fluidsynth fontconfig gd gif gnutls gstreamer gtk java jpeg lame \
      libmpeg2 lm_sensors mad mmx mp3 mp4 mysql nautilus network opencl \
@@ -28,7 +28,7 @@ USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2 \
      symlink taglib threads tiff tk truetype udev v4l vdpau video \
      vim-pager vim-syntax vorbis wxwidgets x264 xcb xcomposite \
      xinerama xml xorg xscreensaver xv xvid xvmc g3dvl icu -dso -ice \
-     -ipv6 -kde midi zsh-completion minizip dot latex multilib"
+     -chroot -ipv6 -kde midi zsh-completion minizip dot latex multilib"
 
 LINGUAS="en"
 
