--- a/make.conf
+++ b/make.conf
@@ -2,6 +2,8 @@ CFLAGS="-O2 -pipe -msse4 -mcx16 -mpopcnt -msahf"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j5"
+ABI_X86="64 32"
+LDCONFIG=""
 
 FEATURES="splitdebug parallel-fetch parallel-install"
 
