--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 	path = vim/bundle/vim-bad-whitespace
 	url = https://github.com/bitc/vim-bad-whitespace.git
     ignore = dirty
+[submodule "zsh_syntax_highlighting"]
+	path = zsh_syntax_highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
