--- a/make.conf
+++ b/make.conf
@@ -2,7 +2,7 @@ CFLAGS="-O2 -pipe -msse4 -mcx16 -mpopcnt -msahf"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j5"
-ABI_X86="64 32"
+ABI_X86="32 64"
 LDCONFIG=""
 
 FEATURES="splitdebug parallel-fetch parallel-install"
@@ -22,15 +22,15 @@ VIDEO_CARDS="nvidia"
 USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2 \
      apache2_modules_dav apng asf bash-completion bzip2 cairo cgi \
      corefonts cscope css csv cups curl cvs dbus debugger \
-     device-mapper dvd examples extensions extras ffmpeg fftw flac \
-     fluidsynth fontconfig gd gif gnutls gstreamer gtk java jpeg lame \
+     device-mapper dvd -examples extensions extras ffmpeg fftw flac \
+     fluidsynth fontconfig gd gif gnutls gstreamer gtk java lame \
      libmpeg2 lm_sensors mad mmx mp3 mp4 mysql nautilus network opencl \
      opengl openmp pdf perl php png profiler python qt3support \
-     qt4 real sdk spell sqlite sse sse2 sse3 ssl subversion svg \
+     real sdk spell sqlite sse sse2 sse3 ssl subversion svg \
      symlink taglib threads tiff tk truetype udev v4l vdpau video \
      vim-pager vim-syntax vorbis wxwidgets x264 xcb xcomposite \
      xinerama xml xorg xscreensaver xv xvid xvmc g3dvl icu -dso -ice \
-     -chroot -kde midi zsh-completion minizip dot latex multilib -tinfo pcntl daemon"
+     -chroot -kde midi zsh-completion minizip dot latex multilib -tinfo pcntl daemon opus -introspection -vala jpeg"
 
 LINGUAS="en"
 
