[make] somehow makefile became unsymlinked

--- a/make.conf
+++ b/make.conf
@@ -1,4 +1,4 @@
-CFLAGS="-O2 -pipe -msse4 -mcx16 -mpopcnt -msahf"
+CFLAGS="-O2 -pipe -march=native"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j5"
@@ -11,6 +11,7 @@ FEATURES="splitdebug parallel-fetch parallel-install"
 #GENTOO_MIRRORS="http://durknation.gotdns.com/gentoo/"
 #SYNC="rsync://192.168.1.222/gentoo-portage"
 ACCEPT_LICENSE="*"
+ACCEPT_KEYWORDS="~amd64"
 EMERGE_DEFAULT_OPTS="--autounmask-write=y"
 
 PORTDIR_OVERLAY="/usr/local/portage"
@@ -23,14 +24,14 @@ USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2 \
      apache2_modules_dav apng asf bash-completion bzip2 cairo cgi \
      corefonts cscope css csv cups curl cvs dbus debugger \
      device-mapper dvd -examples extensions extras ffmpeg fftw flac \
-     fluidsynth fontconfig gd gif gnutls gstreamer gtk java lame \
+     fluidsynth fontconfig gd gif gnutls gstreamer gtk lame \
      libmpeg2 lm_sensors mad mmx mp3 mp4 mysql nautilus network opencl \
      opengl openmp pdf perl php png profiler python qt3support \
      real sdk spell sqlite sse sse2 sse3 ssl subversion svg \
      symlink taglib threads tiff tk truetype udev v4l vdpau video \
      vim-pager vim-syntax vorbis wxwidgets x264 xcb xcomposite \
      xinerama xml xorg xscreensaver xv xvid xvmc g3dvl icu -dso -ice \
-     -chroot -kde midi zsh-completion minizip dot latex multilib -tinfo pcntl daemon opus -introspection -vala jpeg"
+     -chroot -kde midi zsh-completion minizip dot latex multilib -tinfo pcntl daemon opus -introspection -vala jpeg autotrace ads"
 
 LINGUAS="en"
 
@@ -38,3 +39,9 @@ APACHE2_OPTS="-D DEFAULT_VHOST -D PHP5"
 APACHE2_MODULES="${APACHE2_MODULES} cgi mime auth_basic authz_host authz_user authz_file autoindex dir log_config env"
 
 source /var/lib/layman/make.conf
+
+# Set PORTDIR for backward compatibility with various tools:
+#   gentoo-bashcomp - bug #478444
+#   euse - bug #474574
+#   euses and ufed - bug #478318
+PORTDIR="/usr/portage"
