--- a/make.conf
+++ b/make.conf
@@ -25,13 +25,15 @@ USE="256-color 64bit X aac aalib acpi additions alisp alsa apache2 \
      corefonts cscope css csv cups curl cvs dbus debugger \
      device-mapper dvd -examples extensions extras ffmpeg fftw flac \
      fluidsynth fontconfig gd gif gnutls gstreamer gtk lame \
-     libmpeg2 lm_sensors mad mmx mp3 mp4 mysql nautilus network opencl \
+     libmpeg2 lm_sensors mad mmx mp3 mp4 nautilus network opencl \
      opengl openmp pdf perl php png profiler python qt3support \
      real sdk spell sqlite sse sse2 sse3 ssl subversion svg \
      symlink taglib threads tiff tk truetype udev v4l vdpau video \
      vim-pager vim-syntax vorbis wxwidgets x264 xcb xcomposite \
      xinerama xml xorg xscreensaver xv xvid xvmc g3dvl icu -dso -ice \
-     -chroot -kde midi zsh-completion minizip dot latex multilib -tinfo pcntl daemon opus -introspection -vala jpeg autotrace ads thumbnail"
+     -chroot -kde midi zsh-completion minizip dot latex multilib -tinfo pcntl \
+     daemon opus -introspection -vala jpeg autotrace ads thumbnail \
+     llvm-shared-libs video_cards_fglrx tinfo"
 
 LINGUAS="en"
 
